Replace the content.

--- a/src/plonetheme/diazobootstrap/static/theme.html
+++ b/src/plonetheme/diazobootstrap/static/theme.html
@@ -82,9 +82,24 @@
           </div><!--/.well -->
         </div><!--/span-->
         <div id="portal-column-content" class="span4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
+          <div id="viewlet-above-content" class="row-fluid">
+            <div id="portal-breadcrumbs" class="row-fluid">
+              <p>breadcrumbs</p>
+            </div>
+            <div id="plone-lock-status" class="row-fluid">
+            </div>
+          </div>
+          <div id="portal-content" class="row-fluid">
+            <div id="edit-bar" class="row-fluid">
+            </div>
+            <div id="kssPortalMessage" class="row-fluid">
+            </div>
+            <div id="content" class="row-fluid">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn" href="#">View details &raquo;</a></p>
+            </div>
+          </div>
         </div><!--/span-->
         <div id="portal-column-two" class="span4">
           <h2>Heading</h2>
