Put the default diazo rules.

--- a/src/plonetheme/diazobootstrap/static/theme.html
+++ b/src/plonetheme/diazobootstrap/static/theme.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div id="portal-columns" class="row-fluid">
-        <div id="portal-column-one" class="span4">
+        <div id="column-one" class="span4">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
               <li class="nav-header">Sidebar</li>
@@ -83,7 +83,7 @@
         </div><!--/span-->
         <div id="portal-column-content" class="span4">
           <div id="viewlet-above-content" class="row-fluid">
-            <div id="portal-breadcrumbs" class="row-fluid">
+            <div id="breadcrumbs" class="row-fluid">
               <p>breadcrumbs</p>
             </div>
             <div id="plone-lock-status" class="row-fluid">
@@ -94,14 +94,14 @@
             </div>
             <div id="kssPortalMessage" class="row-fluid">
             </div>
-            <div id="content" class="row-fluid">
+            <div id="document-content" class="row-fluid">
               <h2>Heading</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
               <p><a class="btn" href="#">View details &raquo;</a></p>
             </div>
           </div>
         </div><!--/span-->
-        <div id="portal-column-two" class="span4">
+        <div id="column-two" class="span4">
           <h2>Heading</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details &raquo;</a></p>
