Replace the nav.

--- a/src/plonetheme/diazobootstrap/static/theme.html
+++ b/src/plonetheme/diazobootstrap/static/theme.html
@@ -40,7 +40,7 @@
             <p class="navbar-text pull-right">
               Logged in as <a href="#" class="navbar-link">Username</a>
             </p>
-            <ul class="nav">
+            <ul id="global-navigation" class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
