--- a/src/plonetheme/diazobootstrap/static/theme.html
+++ b/src/plonetheme/diazobootstrap/static/theme.html
@@ -30,21 +30,29 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
+          <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Project name</a>
-          <div class="nav-collapse collapse">
-            <p class="navbar-text pull-right">
+          <!-- Be sure to leave the brand out there if you want it shown -->
+          <a class="brand" href="/">Plone</a>
+          <div id="portal-personaltools" class="pull-right">
+            <p class="navbar-text">
               Logged in as <a href="#" class="navbar-link">Username</a>
             </p>
+          </div>
+          <!-- Everything you want hidden at 940px or less, place within here -->
+          <div class="nav-collapse collapse">
             <ul id="global-navigation" class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
+            <form class="navbar-search pull-right">
+              <input type="text" class="search-query" placeholder="Search" name="query">
+            </form>
           </div><!--/.nav-collapse -->
         </div>
       </div>
